# billboard-parser

./: .gitignore  Main.hs  README.md  billboard-parser.cabal
Billboard/: Annotation.hs  BeatBar.hs  BillboardData.hs  BillboardParser.hs  IOUtils.hs  Internal.hs  PostProcessing.hs  Tests.hs  Transitions.hs
HarmTrace/Audio/: ChordTypes.hs
HarmTrace/Base/: MusicRep.hs  Parsing.hs
HarmTrace/Tokenizer/: Tokenizer.hs  Tokens.hs
