name:                billboard-parser
version:             0.1.0.0
synopsis:            A parser for the world famous Billboard chord dataset
-- description:         
homepage:            http://ddmal.music.mcgill.ca/billboard
license:             GPL-3
license-file:        LICENSE
author:              W. Bas de Haas
maintainer:          W.B.dehaas@uu.nl
-- copyright:           
category:            Music
build-type:          Simple
tested-with:         GHC == 7.4.1, GHC == 7.6.1

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

library 
  build-depends:       base >=4.5,
                       directory >=1.1, filepath >=1.3,
                       uu-parsinglib ==2.7.*, ListLike ==3.1.*, 
                       HUnit ==1.2.*, mtl ==2.1.*, HarmTrace-Base >= 0.9
                       
  exposed-modules:     Billboard.Annotation
                       Billboard.BeatBar
                       Billboard.BillboardData
                       Billboard.BillboardParser
                       Billboard.IOUtils
  
  ghc-options:         -Wall
                       -O2 
                       
executable transitions
  main-is: Billboard\Transitions.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  build-depends:       base >=4.5, parseargs ==0.1.*, binary >= 0.6.4,
                       directory >=1.1, filepath >=1.3, containers >= 0.5,  
                       uu-parsinglib ==2.7.*, ListLike ==3.1.*, 
                       HUnit ==1.2.*, mtl ==2.1.*, HarmTrace-Base >= 0.9
  
  ghc-options:         -Wall
                       -O2 
                       -auto-all
